headers/RadarKit/RKFoundation.h

typedef struct RKGlobalParameterStruct {
    char             program[32];                                                                  // Name of the program in log
    char             logfile[RKMaximumPathLength];                                                 // Name of the log file. This is ignored when dailyLog = true
    char             logFolder[256];                                                               // Log folder. This has priority, otherwise, logs are in {rootDataFolder}/log
    char             rootDataFolder[256];                                                          // Root folder where iq, moment health and log files are stored
    bool             logTimeOnly;                                                                  // Time stamp of log entries
    bool             dailyLog;                                                                     // Daily mode where log file is {logFolder}/YYYYMMDD.log
    bool             showColor;                                                                    // Show colors on screen
    bool             statusColor;                                                                  // Color terminal
    bool             showMinorInfo;                                                                // Show minor info in log
    RKSignalLocale   convention;                                                                   // Signal convention
    pthread_mutex_t  lock;                                                                         // Mutual exclusive access
    FILE             *stream;                                                                      // Secondary output stream, can be NULL
} RKGlobalParameters;
extern RKGlobalParameters rkGlobalParameters;
extern const char * const rkResultStrings[];
// Basic
RKComplex RKComplexAdd(const RKComplex, const RKComplex);
RKComplex RKComplexSubtract(const RKComplex, const RKComplex);
RKComplex RKComplexMultiply(const RKComplex, const RKComplex);
RKComplex RKComplexConjugate(const RKComplex);
RKFloat RKComplexAbsSquare(const RKComplex);
// Array
void RKComplexArrayInConjugate(RKComplex *srcdst, const int);                                      // srcdst = conj(srcdst)
void RKComplexArrayInPlaceAdd(RKComplex *src, RKComplex *dst, const int);                          // dst = src + dst
void RKComplexArrayInPlaceSubtract(RKComplex *src, RKComplex *dst, const int);                     // dst = src - dst
void RKComplexArrayInPlaceMultiply(RKComplex *src, RKComplex *dst, const int);                     // dst = src * dst
void RKComplexArrayInPlaceConjugateMultiply(RKComplex *src, RKComplex *dst, const int);            // dst = src * conj(dst)
// Reduction
RKFloat RKFloatArraySum(RKFloat *src, const int);
RKComplex RKComplexArraySum(RKComplex *src, const int);
// Log
int RKLog(const char *, ...);
void RKExit(int);
// File operations (they just directly copied for ctypes to work)
FILE *RKFileOpen(const char *, const char *);
int RKFileClose(FILE *);
long RKFileTell(FILE *);
size_t RKFileGetSize(FILE *);
int RKFileSeek(FILE *, long);
size_t RKFileWrite(const void *, size_t, size_t, FILE *);