headers/RadarKit/RKMisc.h

char *RKNextNoneWhite(const char *);
char *RKLastLine(const char *);
char *RKStripEscapeSequence(const char *line);
//
//
//

float RKMinDiff(const float minuend, const float subtrahend);
float RKUMinDiff(const float minuend, const float subtrahend);
float RKModulo360Diff(const float minuend, const float subtrahend);
bool RKAngularCrossOver(const float a1, const float a2, const float crossover);
//
//
//

long RKGetCPUIndex(const long);
long RKGetMemoryUsage(void);
//
//
//

char *RKCountryFromPosition(const double latitude, const double longitude);
//
//
//

char *RKGetNextKeyValue(char *json, char *key, char *value);
int RKMergeColumns(char *, const char *, const char *, const int);
//
//
//

char *RKStringLower(char *string);
char *RKBytesInHex(char *dst, void *src, const size_t count);
char *RKBinaryString(char *dst, void *src, const size_t count);
void RKHeadTailBytesInHex(char *dst, void *src, const size_t count);
void RKHeadTailBinaryString(char *dst, void *src, const size_t count);
void RKRadarHubPayloadString(char *dst, void *src, const size_t count);
//
//
//

void RKSetArrayToFloat32(void *array, const float value, const size_t count);