python/src/radarkit/_ctypes_.py


# RKMisc.h: 273
if _libs["radarkit"].has("RKNextNoneWhite", "cdecl"):
    RKNextNoneWhite = _libs["radarkit"].get("RKNextNoneWhite", "cdecl")
    RKNextNoneWhite.argtypes = [String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKNextNoneWhite.restype = ReturnString
    else:
        RKNextNoneWhite.restype = String
        RKNextNoneWhite.errcheck = ReturnString

# RKMisc.h: 274
if _libs["radarkit"].has("RKLastLine", "cdecl"):
    RKLastLine = _libs["radarkit"].get("RKLastLine", "cdecl")
    RKLastLine.argtypes = [String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKLastLine.restype = ReturnString
    else:
        RKLastLine.restype = String
        RKLastLine.errcheck = ReturnString

# RKMisc.h: 275
if _libs["radarkit"].has("RKStripEscapeSequence", "cdecl"):
    RKStripEscapeSequence = _libs["radarkit"].get("RKStripEscapeSequence", "cdecl")
    RKStripEscapeSequence.argtypes = [String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKStripEscapeSequence.restype = ReturnString
    else:
        RKStripEscapeSequence.restype = String
        RKStripEscapeSequence.errcheck = ReturnString

# RKMisc.h: 281
if _libs["radarkit"].has("RKMinDiff", "cdecl"):
    RKMinDiff = _libs["radarkit"].get("RKMinDiff", "cdecl")
    RKMinDiff.argtypes = [c_float, c_float]
    RKMinDiff.restype = c_float

# RKMisc.h: 282
if _libs["radarkit"].has("RKUMinDiff", "cdecl"):
    RKUMinDiff = _libs["radarkit"].get("RKUMinDiff", "cdecl")
    RKUMinDiff.argtypes = [c_float, c_float]
    RKUMinDiff.restype = c_float

# RKMisc.h: 283
if _libs["radarkit"].has("RKModulo360Diff", "cdecl"):
    RKModulo360Diff = _libs["radarkit"].get("RKModulo360Diff", "cdecl")
    RKModulo360Diff.argtypes = [c_float, c_float]
    RKModulo360Diff.restype = c_float

# RKMisc.h: 284
if _libs["radarkit"].has("RKAngularCrossOver", "cdecl"):
    RKAngularCrossOver = _libs["radarkit"].get("RKAngularCrossOver", "cdecl")
    RKAngularCrossOver.argtypes = [c_float, c_float, c_float]
    RKAngularCrossOver.restype = c_bool

# RKMisc.h: 290
if _libs["radarkit"].has("RKGetCPUIndex", "cdecl"):
    RKGetCPUIndex = _libs["radarkit"].get("RKGetCPUIndex", "cdecl")
    RKGetCPUIndex.argtypes = [c_long]
    RKGetCPUIndex.restype = c_long

# RKMisc.h: 291
if _libs["radarkit"].has("RKGetMemoryUsage", "cdecl"):
    RKGetMemoryUsage = _libs["radarkit"].get("RKGetMemoryUsage", "cdecl")
    RKGetMemoryUsage.argtypes = []
    RKGetMemoryUsage.restype = c_long

# RKMisc.h: 297
if _libs["radarkit"].has("RKCountryFromPosition", "cdecl"):
    RKCountryFromPosition = _libs["radarkit"].get("RKCountryFromPosition", "cdecl")
    RKCountryFromPosition.argtypes = [c_double, c_double]
    if sizeof(c_int) == sizeof(c_void_p):
        RKCountryFromPosition.restype = ReturnString
    else:
        RKCountryFromPosition.restype = String
        RKCountryFromPosition.errcheck = ReturnString

# RKMisc.h: 303
if _libs["radarkit"].has("RKGetNextKeyValue", "cdecl"):
    RKGetNextKeyValue = _libs["radarkit"].get("RKGetNextKeyValue", "cdecl")
    RKGetNextKeyValue.argtypes = [String, String, String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKGetNextKeyValue.restype = ReturnString
    else:
        RKGetNextKeyValue.restype = String
        RKGetNextKeyValue.errcheck = ReturnString

# RKMisc.h: 304
if _libs["radarkit"].has("RKMergeColumns", "cdecl"):
    RKMergeColumns = _libs["radarkit"].get("RKMergeColumns", "cdecl")
    RKMergeColumns.argtypes = [String, String, String, c_int]
    RKMergeColumns.restype = c_int

# RKMisc.h: 310
if _libs["radarkit"].has("RKStringLower", "cdecl"):
    RKStringLower = _libs["radarkit"].get("RKStringLower", "cdecl")
    RKStringLower.argtypes = [String]
    if sizeof(c_int) == sizeof(c_void_p):
        RKStringLower.restype = ReturnString
    else:
        RKStringLower.restype = String
        RKStringLower.errcheck = ReturnString

# RKMisc.h: 311
if _libs["radarkit"].has("RKBytesInHex", "cdecl"):
    RKBytesInHex = _libs["radarkit"].get("RKBytesInHex", "cdecl")
    RKBytesInHex.argtypes = [String, POINTER(None), c_size_t]
    if sizeof(c_int) == sizeof(c_void_p):
        RKBytesInHex.restype = ReturnString
    else:
        RKBytesInHex.restype = String
        RKBytesInHex.errcheck = ReturnString

# RKMisc.h: 312
if _libs["radarkit"].has("RKBinaryString", "cdecl"):
    RKBinaryString = _libs["radarkit"].get("RKBinaryString", "cdecl")
    RKBinaryString.argtypes = [String, POINTER(None), c_size_t]
    if sizeof(c_int) == sizeof(c_void_p):
        RKBinaryString.restype = ReturnString
    else:
        RKBinaryString.restype = String
        RKBinaryString.errcheck = ReturnString

# RKMisc.h: 313
if _libs["radarkit"].has("RKHeadTailBytesInHex", "cdecl"):
    RKHeadTailBytesInHex = _libs["radarkit"].get("RKHeadTailBytesInHex", "cdecl")
    RKHeadTailBytesInHex.argtypes = [String, POINTER(None), c_size_t]
    RKHeadTailBytesInHex.restype = None

# RKMisc.h: 314
if _libs["radarkit"].has("RKHeadTailBinaryString", "cdecl"):
    RKHeadTailBinaryString = _libs["radarkit"].get("RKHeadTailBinaryString", "cdecl")
    RKHeadTailBinaryString.argtypes = [String, POINTER(None), c_size_t]
    RKHeadTailBinaryString.restype = None

# RKMisc.h: 315
if _libs["radarkit"].has("RKRadarHubPayloadString", "cdecl"):
    RKRadarHubPayloadString = _libs["radarkit"].get("RKRadarHubPayloadString", "cdecl")
    RKRadarHubPayloadString.argtypes = [String, POINTER(None), c_size_t]
    RKRadarHubPayloadString.restype = None

# RKMisc.h: 321
if _libs["radarkit"].has("RKSetArrayToFloat32", "cdecl"):
    RKSetArrayToFloat32 = _libs["radarkit"].get("RKSetArrayToFloat32", "cdecl")
    RKSetArrayToFloat32.argtypes = [POINTER(None), c_float, c_size_t]
    RKSetArrayToFloat32.restype = None

# RKFoundation.h: 93
class struct_RKGlobalParameterStruct(Structure):
    pass

struct_RKGlobalParameterStruct.__slots__ = [
    'program',
    'logfile',
    'logFolder',
    'rootDataFolder',
    'logTimeOnly',
    'dailyLog',
    'showColor',
    'statusColor',
    'convention',
    'lock',
    'stream',
]
struct_RKGlobalParameterStruct._fields_ = [
    ('program', c_char * int(32)),
    ('logfile', c_char * int(1024)),
    ('logFolder', c_char * int(256)),
    ('rootDataFolder', c_char * int(256)),
    ('logTimeOnly', c_bool),
    ('dailyLog', c_bool),
    ('showColor', c_bool),
    ('statusColor', c_bool),
    ('convention', RKSignalLocale),
    ('lock', pthread_mutex_t),
    ('stream', POINTER(FILE)),
]

RKGlobalParameters = struct_RKGlobalParameterStruct# RKFoundation.h: 93

# RKFoundation.h: 95
try:
    rkGlobalParameters = (RKGlobalParameters).in_dll(_libs["radarkit"], "rkGlobalParameters")
except:
    pass

# RKFoundation.h: 96
try:
    rkResultStrings = (POINTER(POINTER(c_char))).in_dll(_libs["radarkit"], "rkResultStrings")
except:
    pass

# RKFoundation.h: 101
if _libs["radarkit"].has("RKComplexAdd", "cdecl"):
    RKComplexAdd = _libs["radarkit"].get("RKComplexAdd", "cdecl")
    RKComplexAdd.argtypes = [RKComplex, RKComplex]
    RKComplexAdd.restype = RKComplex

# RKFoundation.h: 102
if _libs["radarkit"].has("RKComplexSubtract", "cdecl"):
    RKComplexSubtract = _libs["radarkit"].get("RKComplexSubtract", "cdecl")
    RKComplexSubtract.argtypes = [RKComplex, RKComplex]
    RKComplexSubtract.restype = RKComplex

# RKFoundation.h: 103
if _libs["radarkit"].has("RKComplexMultiply", "cdecl"):
    RKComplexMultiply = _libs["radarkit"].get("RKComplexMultiply", "cdecl")
    RKComplexMultiply.argtypes = [RKComplex, RKComplex]
    RKComplexMultiply.restype = RKComplex

# RKFoundation.h: 104
if _libs["radarkit"].has("RKComplexConjugate", "cdecl"):
    RKComplexConjugate = _libs["radarkit"].get("RKComplexConjugate", "cdecl")
    RKComplexConjugate.argtypes = [RKComplex]
    RKComplexConjugate.restype = RKComplex

# RKFoundation.h: 105
if _libs["radarkit"].has("RKComplexAbsSquare", "cdecl"):
    RKComplexAbsSquare = _libs["radarkit"].get("RKComplexAbsSquare", "cdecl")
    RKComplexAbsSquare.argtypes = [RKComplex]
    RKComplexAbsSquare.restype = RKFloat

# RKFoundation.h: 108
if _libs["radarkit"].has("RKComplexArrayInConjugate", "cdecl"):
    RKComplexArrayInConjugate = _libs["radarkit"].get("RKComplexArrayInConjugate", "cdecl")
    RKComplexArrayInConjugate.argtypes = [POINTER(RKComplex), c_int]
    RKComplexArrayInConjugate.restype = None

# RKFoundation.h: 109
if _libs["radarkit"].has("RKComplexArrayInPlaceAdd", "cdecl"):
    RKComplexArrayInPlaceAdd = _libs["radarkit"].get("RKComplexArrayInPlaceAdd", "cdecl")
    RKComplexArrayInPlaceAdd.argtypes = [POINTER(RKComplex), POINTER(RKComplex), c_int]
    RKComplexArrayInPlaceAdd.restype = None

# RKFoundation.h: 110
if _libs["radarkit"].has("RKComplexArrayInPlaceSubtract", "cdecl"):
    RKComplexArrayInPlaceSubtract = _libs["radarkit"].get("RKComplexArrayInPlaceSubtract", "cdecl")
    RKComplexArrayInPlaceSubtract.argtypes = [POINTER(RKComplex), POINTER(RKComplex), c_int]
    RKComplexArrayInPlaceSubtract.restype = None

# RKFoundation.h: 111
if _libs["radarkit"].has("RKComplexArrayInPlaceMultiply", "cdecl"):
    RKComplexArrayInPlaceMultiply = _libs["radarkit"].get("RKComplexArrayInPlaceMultiply", "cdecl")
    RKComplexArrayInPlaceMultiply.argtypes = [POINTER(RKComplex), POINTER(RKComplex), c_int]
    RKComplexArrayInPlaceMultiply.restype = None

# RKFoundation.h: 112
if _libs["radarkit"].has("RKComplexArrayInPlaceConjugateMultiply", "cdecl"):
    RKComplexArrayInPlaceConjugateMultiply = _libs["radarkit"].get("RKComplexArrayInPlaceConjugateMultiply", "cdecl")
    RKComplexArrayInPlaceConjugateMultiply.argtypes = [POINTER(RKComplex), POINTER(RKComplex), c_int]
    RKComplexArrayInPlaceConjugateMultiply.restype = None

# RKFoundation.h: 115
if _libs["radarkit"].has("RKFloatArraySum", "cdecl"):
    RKFloatArraySum = _libs["radarkit"].get("RKFloatArraySum", "cdecl")
    RKFloatArraySum.argtypes = [POINTER(RKFloat), c_int]
    RKFloatArraySum.restype = RKFloat

# RKFoundation.h: 116
if _libs["radarkit"].has("RKComplexArraySum", "cdecl"):
    RKComplexArraySum = _libs["radarkit"].get("RKComplexArraySum", "cdecl")
    RKComplexArraySum.argtypes = [POINTER(RKComplex), c_int]
    RKComplexArraySum.restype = RKComplex

# RKFoundation.h: 119
if _libs["radarkit"].has("RKLog", "cdecl"):
    _func = _libs["radarkit"].get("RKLog", "cdecl")
    _restype = c_int
    _errcheck = None
    _argtypes = [String]
    RKLog = _variadic_function(_func,_restype,_argtypes,_errcheck)

# RKFoundation.h: 120
if _libs["radarkit"].has("RKExit", "cdecl"):
    RKExit = _libs["radarkit"].get("RKExit", "cdecl")
    RKExit.argtypes = [c_int]
    RKExit.restype = None

# RKFoundation.h: 123
if _libs["radarkit"].has("RKFileOpen", "cdecl"):
    RKFileOpen = _libs["radarkit"].get("RKFileOpen", "cdecl")
    RKFileOpen.argtypes = [String, String]
    RKFileOpen.restype = POINTER(FILE)

# RKFoundation.h: 124
if _libs["radarkit"].has("RKFileClose", "cdecl"):
    RKFileClose = _libs["radarkit"].get("RKFileClose", "cdecl")
    RKFileClose.argtypes = [POINTER(FILE)]
    RKFileClose.restype = c_int

# RKFoundation.h: 125
if _libs["radarkit"].has("RKFileTell", "cdecl"):
    RKFileTell = _libs["radarkit"].get("RKFileTell", "cdecl")
    RKFileTell.argtypes = [POINTER(FILE)]
    RKFileTell.restype = c_long

# RKFoundation.h: 126
if _libs["radarkit"].has("RKFileGetSize", "cdecl"):
    RKFileGetSize = _libs["radarkit"].get("RKFileGetSize", "cdecl")
    RKFileGetSize.argtypes = [POINTER(FILE)]
    RKFileGetSize.restype = c_size_t

# RKFoundation.h: 127
if _libs["radarkit"].has("RKFileSeek", "cdecl"):
    RKFileSeek = _libs["radarkit"].get("RKFileSeek", "cdecl")
    RKFileSeek.argtypes = [POINTER(FILE), c_long]
    RKFileSeek.restype = c_int

# RKFoundation.h: 128
if _libs["radarkit"].has("RKFileWrite", "cdecl"):
    RKFileWrite = _libs["radarkit"].get("RKFileWrite", "cdecl")
    RKFileWrite.argtypes = [POINTER(None), c_size_t, c_size_t, POINTER(FILE)]
    RKFileWrite.restype = c_size_t
